@@ -2,7 +2,7 @@
 <package xmlns="http://schemas.microsoft.com/packaging/2010/07/nuspec.xsd">
   <metadata>
     <id>RomanPolunin.SamlFedlet</id>
-    <version>1.0.2</version>
+    <version>1.0.5</version>
     <authors>Roman Polunin</authors>
     <owners>Roman Polunin</owners>
     <title>Fedlet, a SAML SSO Toolkit</title>
@@ -25,7 +25,9 @@ Forked that to make functionality and stability improvements.
     <requireLicenseAcceptance>false</requireLicenseAcceptance>
     <tags>SAML SSO</tags>
 	<copyright>Portions copyright (c) Roman Polunin 2015-2016. Copyright (c) Sun Microsystems 2019-2010</copyright>
-	<releaseNotes>Initial release, see readme on GitHub</releaseNotes>
+	<releaseNotes>Fedlet 1.0.5.0 - July 2016
+Fixed wrong attribute name for AssertionConsumerServiceIndex in the outgoing SAMLRequest.
+Added default value for NameIDPolicyFormat ("unspecified") if not supplied by client code.</releaseNotes>
   </metadata>
   <files>
     <file src="**\*" target="" exclude="*.ps1" /> 
